--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    background-color: #c7cfdd;;
+    background-color: #c7cfdd;
     font-family: Arial, Helvetica, sans-serif;
     margin: 0;
 }
@@ -43,26 +43,30 @@ body {
     display: flex;
     justify-content: center; 
     flex-wrap: wrap; 
+    width: 100%;
+    height: 100%;
 }
 
 .about_container {
     text-align: left;
     padding: 10px;
     margin: 20px; 
-    border: 2px solid black; 
+    border: 2px solid rgb(88, 81, 81); 
     border-radius: 20px;
     width: 350px; 
     height: 600px; 
+    box-shadow: 0 2px 10px rgba(39, 35, 35, 0.2);
 }
 
 .content_container {
     text-align: left;
     padding: 10px;
     margin: 20px; 
-    border: 2px solid black; 
+    border: 2px solid rgb(88, 81, 81); 
     border-radius: 20px;
     width: 650px; 
     height: 600px; 
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
 }
 
 .circle-image1, .circle-image2 {
@@ -86,8 +90,13 @@ p {
     .header {
         padding: 80px 0; 
     }
-    .content_container{
-        width: 400px;
+    .content_container {
+        width: 80%;
+    }
+    .about_container, .content_container {
+        font-size: .35cm;
+        width: 40%; 
+        margin: 10px; 
     }
 }
 
@@ -103,19 +112,16 @@ p {
 
     .container {
         justify-content: center;
-        width: 80%;
-        margin: 20px;
+        width: 100%;
+        margin: 10px;
     }
 
     .about_container, .content_container {
-        font-size: .30cm;
-        width: 80%; 
+        font-size: .31cm;
+        width: 40%; 
         margin: 10px; 
-        
-
     }
 }
-
 
 @media screen and (max-width: 480px) {
     .navbar a {
@@ -128,9 +134,13 @@ p {
 
     .about_container, .content_container {
         font-size: .25cm;
-        width: 90%; 
-        height: 400px;
-        margin: 10px; 
-        
+        width: 80%; 
+        height: auto; 
+        margin: 10px auto; 
+    }
+
+    .container {
+        flex-direction: column; 
+        align-items: center; 
     }
 }
